ultima atualizacao antes do front

--- a/server/index.ipynb
+++ b/server/index.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'b39b37dc-e1c2-46e0-b461-c66ca71102f2'"
+       "'c54039b4-4b57-4283-9d9e-bf033cc2b503'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,10 +51,12 @@
     {
      "data": {
       "text/plain": [
-       "[{'email': 'pedro@gmail.com',\n",
-       "  'id': 'bd22fb3d-cf8b-4f18-9004-4ac844d5a3d8',\n",
+       "[{'id': 'bd22fb3d-cf8b-4f18-9004-4ac844d5a3d8',\n",
        "  'mat': 123456,\n",
-       "  'name': 'Pedro'}]"
+       "  'name': 'Pedro'},\n",
+       " {'id': 'b8df8490-6047-45a4-9689-b88c90be9193',\n",
+       "  'mat': 202017050285,\n",
+       "  'name': 'TUPINAMBÁ'}]"
       ]
      },
      "execution_count": 4,
@@ -108,7 +110,6 @@
     "    'id': genUUID(),\n",
     "    'mat': 202017050285,\n",
     "    'name': 'Kakau',\n",
-    "    'email': 'kakau@gmail.com'\n",
     "}\n",
     "\n",
     "addDatabaseRow('users', newData)"
@@ -122,9 +123,8 @@
     {
      "data": {
       "text/plain": [
-       "{'id': '-O6m7k6h3fg6cPjxFxlT',\n",
-       " 'data': {'email': 'kakau@gmail.com',\n",
-       "  'id': 'b8df8490-6047-45a4-9689-b88c90be9193',\n",
+       "{'id': '-O8rHvKgDj0iaEMDjhoh',\n",
+       " 'data': {'id': '399badbf-6391-4fdd-b5df-d80fbf060990',\n",
        "  'mat': 202017050285,\n",
        "  'name': 'Kakau'}}"
       ]
@@ -159,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'email': 'kakau@gmail.com', 'id': 'b8df8490-6047-45a4-9689-b88c90be9193', 'mat': 202017050285, 'name': 'TUPINAMBÁ'}\n"
+      "{'id': '399badbf-6391-4fdd-b5df-d80fbf060990', 'mat': 202017050285, 'name': 'TUPINAMBÁ'}\n"
      ]
     },
     {
@@ -175,7 +175,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "True"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
